fix overflow container

--- a/src/pages/blogsingle/singleblog.css
+++ b/src/pages/blogsingle/singleblog.css
@@ -6,6 +6,7 @@
 .single__blog__template {
   /* background-color: rgba(0, 0, 0, 0.1); */
   padding: 20px;
+  overflow: hidden;
 }
 
 
